--- a/1/2.md
+++ b/1/2.md
@@ -1,8 +1,17 @@
-```
-this is a test
-```
+1. android - 链接】Android高效加载大图、多图解决方案，有效避
+   http://m.blog.csdn.net/sinyu890807/article/details/9316683
 
-1. # 
+   2. android - 为什么linearlayout的宽度设为wrap-content内容会显示不全
+
+3.h5 app开发简介
+
+4.android - retrofit框架学习
+
+5.android - webview框架 ：https://github.com/Justson/AgentWeb 
+
+6.android - Hbuilder : http://www.dcloud.io/
+
+
 
 
 
