--- a/1/2.md
+++ b/1/2.md
@@ -13,5 +13,7 @@
 
 7.android - 【链接】Javaswitch中使用string作为分支条件
 
-http://blog.csdn.net/tianshuguang/article/details/8690970
+[http://blog.csdn.net/tianshuguang/article/details/8690970](http://blog.csdn.net/tianshuguang/article/details/8690970)
+
+8.android 如何获取项目中assets中login.properties文件的路径？
 
