--- a/1/2.md
+++ b/1/2.md
@@ -17,3 +17,7 @@
 
 8.android 如何获取项目中assets中login.properties文件的路径？
 
+9.android看源码 谷歌的Ali guides和training就是最好的入门资料js ，php
+
+10. Android MPChart柱状图的y轴，颜色不显示怎么办？
+
