--- a/1/2.md
+++ b/1/2.md
@@ -19,5 +19,9 @@
 
 9.android看源码 谷歌的Ali guides和training就是最好的入门资料js ，php
 
-10. Android MPChart柱状图的y轴，颜色不显示怎么办？
+10.Android MPChart柱状图的y轴，颜色不显示怎么办？
+
+11.Android的智能下拉刷新框架-SmartRefreshLayout [https://github.com/scwang90/SmartRefreshLayout](https://github.com/scwang90/SmartRefreshLayout)
+
+12.科大讯飞语音识别
 
